crates/service/tests/diagnostics/typeck/snapshots/features__diagnostics__typeck__global__results_correct.snap
---
source: crates/service/tests/diagnostics/typeck/global.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 5,
          "character": 4
        },
        "end": {
          "line": 5,
          "character": 15
        }
      },
      "severity": 1,
      "code": "const-expr",
      "source": "wat",
      "message": "expression must be constant"
    },
    {
      "range": {
        "start": {
          "line": 6,
          "character": 26
        },
        "end": {
          "line": 6,
          "character": 27
        }
      },
      "severity": 1,
      "code": "syntax",
      "source": "wat",
      "message": "syntax error: expected value type"
    }
  ]
}
