crates/service/tests/diagnostics/typeck/snapshots/features__diagnostics__typeck__global__set.snap
---
source: crates/service/tests/diagnostics/typeck/global.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 5,
          "character": 4
        },
        "end": {
          "line": 5,
          "character": 16
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [i32], found [f32]",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 4,
                "character": 4
              },
              "end": {
                "line": 4,
                "character": 15
              }
            }
          },
          "message": "expected type `i32`, found `f32`"
        }
      ]
    }
  ]
}
